<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Community.Community_Creator">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/createcommunity_question"
        android:textSize="22sp"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/bt_createcommunity_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/oval_button"
            android:text="@string/createcommunity_create"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/bt_createcommunity_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/oval_button"
            android:text="@string/createcommunity_enter"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>