<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Setting.Setting_FeedBack">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_setting_feedback">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:padding="15dp"
                android:text="（必选）选择你想反馈的问题点"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/setting_feedback_choose1"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/setting_feedback_choose2"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/setting_feedback_choose3"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/setting_feedback_choose4"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:padding="15dp"
                android:text="请补充详细问题和意见"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:background="@null"
                android:gravity="start"
                android:hint="请输入不小于十个字的描述"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/240"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:padding="15dp"
                android:textSize="15sp" />


            <Button
                android:id="@+id/bt_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_feedback_submit"
                android:background="@drawable/btn_green_round"
                android:textColor="@color/colorTextWhite"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="50dp"
                android:paddingVertical="15dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>