<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Task.TaskIntroduction_Receive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_community"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/task_center_publish_introduction_title"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_introduction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="TITLE"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingHorizontal="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_gray"
            android:padding="10dp"
            android:text="@string/task_center_publish_introduction_content"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_introduction_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="@dimen/text_1_size"
            android:background="@color/colorGray"
            android:padding="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginVertical="10dp"
                    android:id="@+id/tv_introduction_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_center_publish_introduction_money"
                    android:textColor="@color/colorText" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginVertical="10dp"
                    android:id="@+id/tv_introduction_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_center_publish_introduction_time"
                    android:textColor="@color/colorText" />
            </LinearLayout>

        </LinearLayout>



        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--&gt;-->

        <!--<LinearLayout-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/tv_border_gray"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical">-->

        <!--<TextView-->
        <!--android:id="@+id/communityIntroduction_type"-->
        <!--android:layout_marginVertical="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/task_center_publish_introduction_state"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textSize="20dp" />-->

        <!--<TextView-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/task_center_publish_introduction_state"-->
        <!--android:textColor="@color/colorText" />-->
        <!--</LinearLayout>-->

        <!---->

        <!--</LinearLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_gray"
            android:padding="10dp"
            android:text="@string/task_center_publish_introduction_state"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_introduction_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:textSize="@dimen/text_1_size"
            android:padding="20dp"
            />

        <!--<Button-->
            <!--android:id="@+id/bt_finish"-->
            <!--style="@style/ButtonGreenRound"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_margin="50dp"-->
            <!--android:text="@string/task_center_receive_introduction_finish"-->
            <!--/>-->

    </LinearLayout>

</ScrollView>