<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Home.Homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/bt_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/homepage_symbol1"/>

                <TextView
                    android:id="@+id/tv_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homepage_main"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/bt_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/homepage_symbol2"/>

                <TextView
                    android:id="@+id/tv_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homepage_task"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/bt_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/homepage_symbol3"/>

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homepage_user"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/member_menu"
        app:headerLayout="@layout/member_header"/>

</androidx.drawerlayout.widget.DrawerLayout>